# ford_example

./: CMakeLists.txt  Doxyfile  README.md  project-description.md
src/: kinds.f90  main.F90  routines.f90
